# Hope

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  baselinetest.cpp  test.cpp  unittest.cpp
docs/: AssemblyWriting.md  mir.md
notes/: 2022-05-12 - Integer Range Syntax.md  2022-05-14 - Integer Range Assignment Issue.md  2022-05-21 - Integer Operating Type.md  2022-05-22 - DeclartionType and OperatingType.md  2022-05-29 - Integer Typecast.md  2022-06-25 - Modulo IR and Optimization.md  2022-06-26 - Binary Expression Test Canonicalization.md  ASTToCFG.md  BinaryExpressionTransformation.md  Coercion.md  CommonSubExpressionElimination.md  DifferentRegisterSizeSupportInstruction.md  DivisionAndModulo.md  ErrorParsing.md  ImplicitIntegerConversion.md  ParameterPassingRules.md  doc.md  ir.md  passes.md
spec/: Integer.md  ir.md  passes.md
src/: baselinetest.cpp  unittest.cpp  unittest.h
src/Domain/: Binder.cpp  Binder.h  Checker.cpp  Checker.h  Compiler.cpp  Compiler.h  Exceptions.h  Mir.cpp  Mir.h  Parser.Error.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Syntax.h
src/Domain/CommandLine/: BaselineTestCommand.h  BaselineTestCommandImpl.h  Command.Test.cpp  Command.cpp  Command.h
src/Domain/Compiler/: Binder.cpp  Binder.h  Checker.cpp  Checker.h  Compiler.cpp  Compiler.h  CompilerTypes.cpp  CompilerTypes.h  ErrorWriter.cpp  ErrorWriter.h  Exceptions.h  Linker.cpp  Linker.h  Linker_VisualStudioLinker.cpp  Linker_VisualStudioLinker.h  Parser.Error.h  Parser.Impl.h  Parser.cpp  Parser.h  ParserError.cpp  ParserError.h  ParserErrorImpl.h  Scanner.cpp  Scanner.h
src/Domain/Compiler/Error/: Error.cpp  Error.h  Error_Syntax.cpp  Error_Syntax.h  Error_TypeCheck.cpp  Error_TypeCheck.h
src/Domain/Compiler/Instruction/: AssemblyWriter.cpp  AssemblyWriter.h  ByteWriter.cpp  ByteWriter.h  Instruction.Arithmetic.h  Instruction.Constant.h  Instruction.h  ObjectFileWriter.cpp  ObjectFileWriter.h  Optimizer.cpp  Optimizer.h  Parser.Error.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  TextWriter.cpp  TextWriter.h  Transformer.cpp  Transformer.h
src/Domain/Compiler/Instruction/Assembly/: AssemblyWriterInterface.cpp  AssemblyWriterInterface.h
src/Domain/Compiler/Instruction/ObjectFileWriter/: BaselineObjectFileWriter.cpp  BaselineObjectFileWriter.h  DyldInfoWriter.cpp  DyldInfoWriter.h  ExportInfoWriter.cpp  ExportInfoWriter.h  ExportTrieTree.cpp  ExportTrieTree.h  MachOFileWriter.cpp  MachOFileWriter.h  MachoFileWriter.cpp  MachoFileWriter.h  ObjectFileWriter.h  ObjectFileWriterInterface.h  Pe32FileWriter.cpp  Pe32FileWriter.h
src/Domain/Compiler/Syntax/: Instruction.h  Syntax.Block.h  Syntax.Declarations.h  Syntax.Definition.h  Syntax.Kind.h  Syntax.Labels.h  Syntax.Statement.h  Syntax.Type.cpp  Syntax.Type.h  Syntax.h
src/Domain/Compiler/TestHarness/: AssemblyParser.h  BaselinePrinter.h  BaselinePrinterImpl.h  CompilerBaselineParser.h  CompilerBaselineParserImpl.h  CompilerFixture.h  MachOBaselineParser.h  MachOBaselineParserImpl.h  ObjectFileBaselineParser.h  ObjectFileBaselineParserImpl.h  Pe32BaselineParser.h  Pe32BaselineParserImpl.h  StashIrPrinter.cpp  StashIrPrinter.h  TypeBaselinePrinter.cpp  TypeBaselinePrinter.h
src/Domain/Compiler/TestHarness/Aarch/: Aarch64AssemblyParser.cpp  Aarch64AssemblyParser.h  Aarch64AssemblyPrinter.cpp  Aarch64AssemblyPrinter.h  Aarch64Instructions.cpp  Aarch64Instructions.h  Aarch64Parser.cpp  Aarch64Parser.h  Aarch64Printer.cpp  Aarch64Printer.h
src/Domain/Compiler/TestHarness/TextDiff/: DiffPrinter.cpp  (+3 more)
src/Domain/Compiler/Tests/: AssemblyParser.cpp  BaselinePrinter.cpp  BaselinePrinter.h  BaselinePrinterImpl.h  CompilerBaselineParser.cpp  CompilerBaselineParser.h  CompilerBaselineParserImpl.h  CompilerTestHarness.h  ExternalFunction.cpp  ExternalFunction.h  SimpleTest.cpp  StashIrPrinter.cpp  StashIrPrinter.h  Test.cpp  Test.h
src/Domain/Instruction/: AssemblyWriter.cpp  AssemblyWriter.h  Instruction.h  ObjectFileWriter.cpp  ObjectFileWriter.h  Parser.Error.h  Parser.cpp  Parser.h  Scanner.cpp  Syntax.h  TextWriter.cpp  TextWriter.h  Transformer.cpp  Transformer.h
src/Domain/Instruction/Assembly/: AssemblyWriterInterface.h
src/Domain/Instruction/ObjectFileWriter/: MachOFileWriter.cpp  MachOFileWriter.h  ObjectFileWriterInterface.h
src/Domain/StandardLibrary/: CRuntime.hs  Console.hs  IOStream.l1  Process.l1  Target.l1
src/Domain/StandardLibrary/Old/: Module.l1
src/Domain/Tests/: BaselineTestCommand.Test.cpp
src/Foundation/: BaseScanner.cpp  BaseScanner.h  BaselineTestProject.h  BaselineTestProjectImpl.h  Bit.cpp  Bit.h  Buffer.cpp  Buffer.h  Character.h  CommandLine.h  CommandLineImpl.h  Crc32.cpp  Crc32.h  DocumentExecutor.cpp  DocumentExecutor.h  Execute.cpp  Execute.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FileReader.cpp  FileReader.h  FirstCharacterHash.h  FirstCharacterHashImpl.h  HashKeyValueNode.h  HashKeyValueNodeImpl.h  HashTableMap.h  HashTableMapImpl.h  Int128.cpp  Int128.h  Int256.cpp  Int256.h  List.h  ListImpl.h  M64.h  Path.cpp  Path.h  Printer.cpp  Printer.h  (+14 more)
src/Foundation/Memory/: MemoryPool.cpp  MemoryPool.h  TextSpan.cpp  TextSpan.h  TextSpanCharacterIterator.cpp  TextSpanCharacterIterator.h  TextSpanChunkIterator.cpp  TextSpanChunkIterator.h  Utf8Span.cpp  Utf8Span.h  Utf8SpanIterator.cpp  Utf8SpanIterator.h
src/Foundation/Memory/DataStructure/: MemoryPooledHashTableMap.h  MemoryPooledHashTableMapImpl.h  MemoryPooledHashTableSet.h  MemoryPooledHashTableSetImpl.h  MemoryPooledPerfectHashTable.h  MemoryPooledPerfectHashTableImpl.h  MemoryPooledStack.h  MemoryPooledStackImpl.h  MemoryPooledVector.h  MemoryPooledVectorImpl.h
src/Foundation/Tests/: BaselineTestProjectTest.cpp  FoundationFixture.h  Int128.Addition.Test.cpp  Int128.And.Test.cpp  Int128.Division.Test.cpp  Int128.Multiplication.Test.cpp  Int128.Or.Test.cpp  Int128.Remainder.Test.cpp  Int128.Subtraction.Test.cpp  TestRunner.Test.cpp
src/Foundation/Tests/Mocks/: PathMock.h  PrinterMock.h  TestRunnerMock.h
src/Tests/: EletSourceDocumentExecutor.cpp  EletSourceDocumentExecutor.h
src/Tests/Baselines/Tests/: Some.l1
(+405 files in other folders)
